# Esprit-PI-4DATA-2026-5G-Network-Anomaly-Detection

./: .env.example  .gitignore  DEMO_CHECKLIST.md  IMPLEMENTATION_AUDIT.md  JURY_NEXT_WEEK_PLAN.md  MOE_IDS_GUIDE.md  PROJECT_CHANGES_SUMMARY.md  README.md  TESTING_AND_SETUP.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt  requirements.txt.txt
moe-ids/: .dockerignore  .env.example  .gitignore  Makefile  docker-compose.yml.old  pyproject.toml
moe-ids/mlops/: mlflow_client.py
moe-ids/moe_ids/: __init__.py  artefacts.py  calibration.py  config.py  experts.py  gate.py  injection.py  logging.py  moe.py  projection.py  schemas.py
moe-ids/monitoring/: prometheus.yml
moe-ids/scripts/: detect_drift.py  evaluate.py  promote.py  train.py
moe-ids/services/api/: Dockerfile  db.py  dependencies.py  main.py  metrics.py  routes_batch.py  routes_health.py  routes_realtime.py  routes_train.py
moe-ids/services/common/: __init__.py  auth.py  db.py  metrics.py  predictor.py
moe-ids/services/inference/: Dockerfile  main.py  routes_batch.py  routes_health.py  routes_metrics.py  routes_realtime.py
moe-ids/services/monitoring/: Dockerfile  main.py  routes_drift.py  routes_health.py
moe-ids/services/training/: Dockerfile  main.py  routes_health.py  routes_train.py
moe-ids/tests/: conftest.py
moe-ids/tests/fixtures/: sample_5g_10rows.csv  sample_6g_10rows.csv  snapshot_5g.json  snapshot_6g.json
moe-ids/tests/integration/: test_api_batch.py  test_train_pipeline.py
moe-ids/tests/unit/: test_calibration.py  test_drift.py  test_gate.py  test_injection.py  (+3 more)
(+112 files in other folders)
